--- a/app/templates/admin_content/manage_content.html
+++ b/app/templates/admin_content/manage_content.html
@@ -2,11 +2,19 @@
 {% block title %}Admin | Manage Content{% endblock %}
 
 {% block app_content %}
-<h2>Manage Content</h2>
-<p>There are {{ contents|length }} content areas that are editable:</p>
-<ul>
-{% for content in contents %}
-    <li>On {{ content.page.name|capitalize }} page, <a href="{{ url_for('admin_content.edit_content',id=content.id) }}"><i>{{ content.name }}</i></a></li>
-{% endfor %}
-</ul>
+<div class="section">
+  <div class="content">
+    <h2>Manage Content</h2>
+    <p>There are {{ contents|length }} content areas that are editable:</p>
+    <ul>
+    {% for content in contents %}
+      <li>On {{ content.page.name|capitalize }} page,
+        <a href="{{ url_for('admin_content.edit_content',id=content.id) }}" class="has-text-weight-bold">
+          {{ content.name }}
+        </a>
+      </li>
+    {% endfor %}
+    </ul>
+  </div>
+</div>
 {% endblock %}
