--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -2,19 +2,31 @@
 {% block title %}Forgot Password{% endblock %}
 
 {% block app_content %}
-<h2>Forgot Password</h2>
-<form action="{{ url_for('auth.forgot_password') }}"  method="post">
-    {{ form.csrf_token }}
-    <div class="formgrid">
-        {{ form.email.label }}
-        <div class="form-group">
-        {% for error in form.email.errors %}
-            <span class="error-msg">[ {{ error }} ]</span>
-        {% endfor %}
-        {{ form.email }}
-        </div>
+<div class="section">
+  <div class="columns">
+    <div class="column is-5">
+      <div class="content">
+        <h2>Forgot Password</h2>
+        <form action="{{ url_for('auth.forgot_password') }}"  method="post">
+        {{ form.csrf_token }}
+          <div class="field">
+            {{ form.email.label(class_="label") }}
+            <p class="control">
+              {{ form.email(class_="input") }}
+            </p>
+            {% for error in form.email.errors %}
+            <p class="help is-danger">{{ error }}</p>
+            {% endfor %}
+          </div>
 
-        {{ form.submit(class="submit-btn") }}
+          <div class="field">
+            <div class="control">
+              {{ form.submit(class_="button is-link") }}
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
-</form>
+  <div>
+</div>
 {% endblock %}
