--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -1,467 +1,18 @@
-/*
-header #DDDDDD;
-page #EFEFEF;
-Link #DDDDDD;
-Tag number  #0B619880;
-*/
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    height: 100%;
-    width: 100%;
-    font-family: 'Roboto Slab', serif;
-    font-size: 15px;
-}
-
-body {
-    background-color: #EFEFEF;
-}
-
-h1 {font-size: 36px;}
-h2 {font-size: 30px;}
-h3 {font-size: 22px;}
-h1, h2, h3, h4, h5 {color: #333333;}
-h2, h3, h4, h5 {margin-bottom: 1.0rem;}
-p, table, ul li:last-of-type {margin-bottom: 0.8rem;}
-ul > li, ol > li {margin-bottom: 0.4rem; margin-left: 2.0rem;}
-ul > ul > li, ol > ol > li, ul > ol > li, ol > ul > li {margin-bottom: 0.4rem; margin-left: 4.0rem;}
-a {color:#0B6198; text-decoration: none;}
-a:hover {color:#C85A13;}
-hr {border-top: 1px solid #CCCCCC; margin-top: 0.4rem; margin-bottom: 0.8rem;}
-img {max-width: 100% !important; height: auto !important;}
-.img-rounded {border-radius: 20%;}
-.minor-text {font-size: 0.8rem; color: #666666;}
-
-
-/*Makes input always white for Chrome*/
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active  {
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
-}
-
-
-/*** Page wrapper ***/
-.page-container {
-    min-height: 100%;
+.site {
     display: flex;
+    min-height: 100vh;
     flex-direction: column;
-    align-items: stretch;
 }
-
-/*** Header section ***/
-.head-section {
-    padding: 10px 30px 10px 30px;
-    display: grid;
-    justify-items: start;
-    align-items: baseline;
-    grid-gap: 2%;
-    background-color: #0B6198;
-    margin-bottom: 1.4rem;
-    flex-shrink: 0;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: auto auto;
+.site-main {
+    flex: 1 0 auto;
+    background-color: #f4f4f4;
 }
 .site-title {
-    grid-column: 1/2;
-    grid-row: 1/2;
+  font-family: 'Merriweather Sans', sans-serif;
 }
-.site-title a {
-    font-family: 'Anton', sans-serif;
-    color: #EFEFEF;
-    text-decoration: none;
+.footer a {
+  color: #F4F4F4;
 }
-.site-search {
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-.site-search > input {
-    font-family: inherit;
-    font-size: 0.9rem;
-}
-.site-search > input[type=text] {
-    width: 110px;
-}
-.site-search > input[type=submit] {
-    width: auto;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-.site-nav {
-    grid-column: 1/3;
-    grid-row: 2/3;
-}
-.site-nav a {
-    text-decoration: none;
-    color: #EFEFEF;
-    padding-left: 2px;
-    padding-right: 2px;
-    font-size: 1.0rem;
-}
-.site-nav a:hover {
-    /*same as #EFEFEF80 more browsers understand rgba*/
-    color: rgba(238,238,238,0.5);
-}
-.nav-dropdown {
-    display: inline;
-    position: relative;
-}
-.nav-dropdown-content {
-    display: none;
-    z-index: 1;
-    position: absolute;
-    left: 0;
-    background-color: #0B6198;
-    white-space: nowrap;
-}
-.nav-dropdown-content > a {
-    display: block;
-    padding: 8px;
-}
-.nav-dropdown:hover .nav-dropdown-content {
-    display: block;
-}
-
-
-/*** Main Section ***/
-.main-section {
-    padding: 10px 30px 10px 30px;
-    flex-grow: 1;
-    align-self: flex-start;
-    padding-bottom: 4rem;
-    width: 100%;
-}
-.content-wrapper {
-    display: grid;
-    grid-gap: 2%;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-}
-/*** Main Area ***/
-.content-main {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    min-width: 100%;
-    max-width: 100%;
-}
-.post-btn > a {
-    display: inline-block;
-    background-color: #0B6198;
-    color: #EFEFEF;
-    font-size: 0.8rem;
-    padding: 2px;
-    margin: 2px;
-    border-radius: 4px;
-}
-.post-btn > a:hover {
-    background-color: #C85A13;
-}
-/*** Sidebar ***/
-.content-sidebar {
-    margin-right: 20px;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    margin-bottom: 24px;
-}
-.content-sidebar h3:not(:first-child) {
-    margin-top: 24px;
-}
-.content-sidebar > ul {
-    list-style: none;
-    white-space: nowrap;
-}
-.content-sidebar > ul > li {
-    padding: 8px 2px;
-    border-bottom: 1px solid #CCCCCC;
-    margin: 0;
-}
-.tag_num {
-    color: #0B619880;
-    font-size: 0.8rem;
-}
-.side-images {
-    font-size: 0.9rem;
-}
-.side-images img {
-    padding: 2px 2px;
-}
-/*** Comments ***/
-.comments {
-    background-color:white;
-    margin: 10px 0 10px 0;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-
-/*** Footer section ***/
-.footer-section {
-    padding: 40px 0 40px 0;
-    background-color: #0B6198;
-    color: #EFEFEF;
-    text-align: center;
-    flex-shrink: 0;
-}
-.footer-icons {
-    font-size: 2rem;
-}
-.footer-icons > a {
-    color: #EFEFEF;
-    padding-right: 10px;
-}
-.footer-icons > a:hover {
-    color: rgba(238,238,238,0.5);
-}
-
-
-/*** Forms ***/
-.formgrid, .formstacked {
-    display: grid;
-    grid-gap: 0.5em 2.0em;
-    grid-auto-flow: dense;
-    align-items: start;
-    justify-items: start;
-    grid-template-columns: auto;
-    width: 100%;
-}
-.formgrid label, .formstacked label {
-    grid-column: 1 / 2;
-}
-input[type=text], input[type=password], textarea, select {
-    outline: none;
-    border: 1px solid #cccccc;
-    padding: 2px;
-
-}
-input[type=text]:focus, input[type=password]:focus, textarea:focus {
-    outline: solid #C85A1350;
-}
-.formgrid input, .formgrid textarea, .formgrid select, .formgrid button,
-.formstacked input, .formstacked textarea, .formstacked select, .formstacked button,
-.g-recaptcha, .form-group {
-    grid-column: 1 / 2;
-    font-family: inherit;
-    font-size: 100%;
-    width: 100%;
-}
-.formgrid .submit-btn, .formstacked .submit-btn {
-    font-family: inherit;
-    font-size: 100%;
-    width: 7rem;
-}
-.formgrid > input[type=checkbox] {
-    height: 0.9rem;
-    width: 0.9rem;
-    align-self: center;
-}
-.login-footer {
-    border-top: 1px solid #CCCCCC;
-    margin-top: 20px;
-    text-align: right;
-}
-.delete-btn, .submit-btn  {
-    font-family: inherit;
-    font-size: 100%;
-    width: 7rem;
-}
-.error-msg {
-    display: block;
-    color: red;
-    font-size: 0.8rem;
-}
-
-
-/*** Pagination ***/
-.paging > ul {
-    display: table;
-    border-collapse: collapse;
-    margin-top: 50px;
-    display: inline-block;
-}
-.paging > ul > li {
-    display: table-cell;
-    list-style: none;
-    border: 1px solid #0B6198;
-}
-.paging > ul > li > a {
-    color: #0B6198;
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 4px;
-}
-.paging > ul > li a:hover {
-    color: #C85A13;
-
-}
-.paging > ul > .active {
-    background-color: #0B6198;
-    color: #EFEFEF;
-    padding: 4px;
-}
-
-
-/*** Tabs ***/
-.tab {
-    display: block;
-    margin-bottom: 1.2rem;
-    border-bottom: 1px solid #AAAAAA;
-}
-.tab > button {
-    border: none;
-    cursor: pointer;
-    background-color: inherit;
-    outline: none;
-    width: auto;
-    padding: 5px 10px 5px 10px;
-    border-top: 1px solid #FFFFFF00;
-    border-left: 1px solid #FFFFFF00;
-    border-right: 1px solid #FFFFFF00;
-}
-.tab > button:hover {
-    border-top: 1px solid #DDDDDD;
-    border-left: 1px solid #DDDDDD;
-    border-right: 1px solid #DDDDDD;
-}
-.tab > button.active {
-    border-top: 1px solid #AAAAAA;
-    border-left: 1px solid #AAAAAA;
-    border-right: 1px solid #AAAAAA;
-}
-.tabcontent {
-  animation: fadeEffect 1s; /* Fading effect takes 1 second */
-}
-/* Go from zero to full opacity */
-@keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-
-/*** Tables ***/
-table {
-    border-collapse: collapse;
-}
-th, td {
-    padding: 0.3rem;
-}
-.table-stripe tr:nth-child(even) {
-    background-color: #DDDDDD;
-}
-
-
-/*** Image Gallery ***/
-.image-gallery {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-}
-
-.image-container {
-    width: 230px;
-    min-width: 230px;
-    max-width: 230px;
-    padding: 6px;
-}
-.word-wrap {
-    overflow-wrap: break-word;
-}
-
-
-/*** Alerts ***/
-.alert-msg {
-    display: block;
-    margin-bottom: 10px;
-}
-.msg-success {
-    color: green;
-}
-.msg-error {
-    color: red;
-}
-
-
-/*** Projects page ***/
-.projects {
-    display: grid;
-    grid-template-columns: auto;
-    align-items: start;
-}
-
-.projects img {
-    grid-column: 1/1;
-    margin: 20px 0 20px 0;
-    min-width: 300px
-    max-width: 500px;
-}
-
-.projects .proj-descrip {
-    grid-column: 1/1;
-    margin: 10px 0 20px 0;
-}
-
-
-/*** Desktop screen size ***/
-@media only screen and (min-width: 768px) {
-    .head-section {
-        /* middle section expand out */
-        grid-template-columns: auto 1fr auto;
-        grid-template-rows: auto;
-    }
-    .site-search {
-        grid-column: 3/4;
-        grid-row: 1/2;
-    }
-    .site-nav {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        justify-self: end;
-    }
-    .content-wrapper {
-        grid-template-columns: 1fr auto;
-        grid-template-rows: auto;
-    }
-    .content-main {
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-    .content-sidebar {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        width: 220px;
-    }
-    .formgrid {
-        grid-template-columns: auto 1fr;
-    }
-    .formgrid label {
-        grid-column: 1/2;
-    }
-    .formgrid input, .formgrid textarea, .formgrid select, .formgrid button,
-    .g-recaptcha, .form-group {
-        grid-column: 2/3;
-        max-width: 700px;
-    }
-    /*** Projects page ***/
-    .projects {
-        display: grid;
-        grid-template-columns: minmax(300px, 500px) auto;
-        align-items: start;
-    }
-    .projects img {
-        grid-column: 1/2;
-        margin: 20px 0 20px 0;
-    }
-    .projects .proj-descrip {
-        grid-column: 2/2;
-        padding-left: 10px;
-        margin: 20px 0 20px 0;
-    }
+.footer a:hover {
+  color: #0E0E0E;
 }
