--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -2,27 +2,41 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block app_content %}
-<h2>Reset Password</h2>
-<form action="" method="post">
-    {{ form.csrf_token }}
-    <div class="formgrid">
-        {{ form.password.label }}
-        <div class="form-group">
-        {% for error in form.password.errors %}
-            <span class="error-msg">[ {{ error }} ]</span>
-        {% endfor %}
-        {{ form.password }}
-        </div>
+<div class="section">
+  <div class="columns">
+    <div class="column is-5">
+      <div class="content">
+        <h2>Reset Password</h2>
+        <form action="" method="post">
+        {{ form.csrf_token }}
+          <div class="field">
+            {{ form.password.label(class_="label") }}
+            <p class="control">
+              {{ form.password(class_="input") }}
+            </p>
+            {% for error in form.password.errors %}
+            <p class="help is-danger">{{ error }}</p>
+            {% endfor %}
+          </div>
 
-        {{ form.password2.label }}
-        <div class="form-group">
-        {% for error in form.password2.errors %}
-            <span class="error-msg">[ {{ error }} ]</span>
-        {% endfor %}
-        {{ form.password2 }}
-        </div>
+          <div class="field">
+            {{ form.password2.label(class_="label") }}
+            <p class="control">
+              {{ form.password2(class_="input") }}
+            </p>
+            {% for error in form.password2.errors %}
+            <p class="help is-danger">{{ error }}</p>
+            {% endfor %}
+          </div>
 
-        {{ form.submit(class="submit-btn") }}
+          <div class="field">
+            <div class="control">
+              {{ form.submit(class_="button is-link") }}
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
-</form>
+  </div>
+</div>
 {% endblock %}
