--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,6 +2,10 @@
 {% block title %}404 Error{% endblock %}
 
 {% block app_content %}
-<h2>404 not found error</h2>
-<p><a href="{{ url_for('main.index') }}">Back</a></p>
+<div class="section">
+  <div class="content">
+    <h2>404 not found error</h2>
+    <p><a href="{{ url_for('main.index') }}">Back</a></p>
+  </div>
+</div>
 {% endblock %}
