--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -2,7 +2,10 @@
 {% block title %}500 Error{% endblock %}
 
 {% block app_content %}
-<h2>500 internal server error</h2>
-<p>Sorry for the inconvenience!</p>
-<p><a href="{{ url_for('main.index') }}">Back</a></p>
+<div class="section">
+  <div class="content">
+    <h2>500 internal server error</h2>
+    <p><a href="{{ url_for('main.index') }}">Back</a></p>
+  </div>
+</div>
 {% endblock %}
