--- a/app/templates/post/del_post.html
+++ b/app/templates/post/del_post.html
@@ -2,34 +2,39 @@
 {% block title %}Admin | Delete Post{% endblock %}
 
 {% block app_content %}
-<h2>Delete Post</h2>
-
-<form action="{{ url_for('post.del_post',id=post.id) }}"  method="post">
-    {{ form.csrf_token }}
-    <p>Are you sure you want to delete this post?</a>
-    <hr />
-    <table border=0 cellpadding=2 cellspacing=2>
-        <tr>
-            <td><strong>Author: </strong></td>
-            <td>{{ post.author.firstname }} {{ post.author.lastname }}</td>
-        </tr><tr>
-            <td><strong>Created: </strong></td>
-            <td>{{ moment(post.create_date).format('DD/MM/YYYY') }}</td>
-        </tr><tr>
-            <td><strong>Title:</strong></td>
-            <td>{{ post.heading | safe }}</td>
-        </tr><tr>
-            <td colspan="2">
-                <p><strong>Content:</strong></p>
-                <p>{{ post.post | safe }}</p>
-            </td>
-        </tr><tr>
-            <td><strong>Tags:</strong></td>
-            <td>{{ tags }}</td>
-        </tr>
+<div class="section">
+  <div class="content">
+    <h2>Delete Post</h2>
+    <p>Are you sure you want to delete this post?</p>
+    <table class="table is-narrow">
+      <tr>
+        <td><strong>Author: </strong></td>
+        <td>{{ post.author.firstname }} {{ post.author.lastname }}</td>
+      </tr><tr>
+        <td><strong>Created: </strong></td>
+        <td>{{ moment(post.create_date).format('DD/MM/YYYY') }}</td>
+      </tr><tr>
+        <td><strong>Title:</strong></td>
+        <td>{{ post.heading | safe }}</td>
+      </tr><tr>
+        <td colspan="2">
+          <p><strong>Content:</strong></p>
+          <p>{{ post.post | safe }}</p>
+        </td>
+      </tr><tr>
+        <td><strong>Tags:</strong></td>
+        <td>{{ tags }}</td>
+      </tr>
     </table>
-    <hr />
+  </div>
 
-    {{ form.submit(class="delete-btn") }}
-</form>
+  <form action="{{ url_for('post.del_post',id=post.id) }}"  method="post">
+  {{ form.csrf_token }}
+    <div class="field">
+      <div class="control is-expanded">
+        {{ form.submit(class_="button is-link") }}
+      </div>
+    </div>
+  </form>
+</div>
 {% endblock %}
