--- a/app/templates/search/search.html
+++ b/app/templates/search/search.html
@@ -2,14 +2,18 @@
 {% block title %}Search Results{% endblock %}
 
 {% block app_content %}
-<h2>Search Results</h2>
-{% if not results %}
-    <p>No results returned</p>
-{% else %}
-    {% for r in results %}
+<div class="section">
+  <div class="content">
+    <h2>Search Results</h2>
+    {% if not results %}
+      <p>No results returned</p>
+    {% else %}
+      {% for r in results %}
         <h3><a href="{{ url_for('main.post_detail',id=r['post'].id) }}">{{ r['post'].heading }}</a></h3>
         <p>{{ r['post'].getTextSummary() }}</p>
         <div class="minor-text">Number of matches: {{ r['count'] }}</div>
-    {% endfor %}
-{% endif %}
+      {% endfor %}
+    {% endif %}
+  </div>
+</div>
 {% endblock %}
